first commit in sajid

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+  /* text-align: center; */
 }
 
 .App-logo {
@@ -28,11 +28,24 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.custom-shadow {
+  box-shadow: inset 0px 4px 4px rgba(255, 188, 15, 0.4);
+}
+
+/* For MUI SELECT Component */
+.custom-input fieldset {
+  border: 1px solid rgba(255, 188, 15, 0.5) !important;
+  box-shadow: inset 0px 4px 4px rgba(255, 188, 15, 0.25) !important;
+  border-radius: 3px !important;
+}
+
+.custom-addUser-input fieldset {
+  border: 1px solid rgba(255, 188, 15, 0.5) !important;
+  border-radius: 3px !important;
+}
+
+.custom-editUser-input fieldset {
+  border: 1px solid rgba(255, 188, 15, 0.5) !important;
+  border-radius: 3px !important;
+  background-color: #FFBC0F;
 }
