--- a/src/App.css
+++ b/src/App.css
@@ -60,3 +60,39 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   color: #FFBC0F;
 
 }
+
+.ant-upload-select {
+  width: 600px !important;
+  border: 1px dashed #ffbc0fb3 !important;
+  border-radius: 3px !important;
+  background-color: white !important;
+}
+
+.ant-modal {
+  width: 1000px !important;
+}
+
+.ant-slider-step {
+  background-color: yellow !important;
+}
+
+.ant-slider-handle ::before {
+  box-shadow: 0 0 0 2px #FFBC0F !important
+}
+
+.ant-slider .ant-slider-handle::after {
+  box-shadow: 0 0 0 2px #FFBC0F !important
+}
+
+.ant-upload-wrapper {
+  display: flex !important;
+  justify-content: center !important;
+}
+
+.ant-upload-list-item-image {
+  border-radius: 50% !important;
+}
+
+.ant-upload-list-item-name {
+  color: #FFBC0F !important;
+}
