--- a/src/App.css
+++ b/src/App.css
@@ -96,3 +96,15 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 .ant-upload-list-item-name {
   color: #FFBC0F !important;
 }
+
+.custom-upload .ant-upload-select {
+  width: 100% !important;
+  background: rgba(255, 188, 15, 0.05) !important;
+  border: 1px dashed rgba(255, 188, 15, 0.7) !important;
+  border-radius: 3px !important;
+}
+
+.ant-btn-primary {
+  background-color: #FFBC0F !important;
+  color: black !important;
+}
