--- a/src/App.css
+++ b/src/App.css
@@ -108,3 +108,10 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   background-color: #FFBC0F !important;
   color: black !important;
 }
+
+
+/* global p margin bottom removed */
+
+p{
+  margin-bottom: 0px!important;
+}
