--- a/src/App.css
+++ b/src/App.css
@@ -129,3 +129,14 @@ p {
   border: 1px solid rgba(255, 188, 15, 0.5) !important;
   border-radius: 3px !important;
 }
+
+.mySwiper1 .swiper-button-prev {
+  color: #FFBC0F;
+
+}
+
+
+.mySwiper1 .swiper-button-next {
+  color: #FFBC0F;
+
+}
